# skoltech-schedule

./: CMakeLists.txt  readme.md
include/: APIprocessor.hpp  FileManager.hpp  ScheduleFiller.hpp  Users.hpp
src/: ReminderScheduler.cpp  Users.cpp  users_c_api.cpp
